--- a/index.html
+++ b/index.html
@@ -18,14 +18,25 @@
         font-weight: bold;
       }
       h5{
-        color: #5F9EA0 ;
+        color: #666 ;
         font-family: sans-serif;
       }
       .container {
-        padding-bottom: 20px;
+        padding: 20px;
+        background-color:#EAEAEA  ;
       }
-      .form-group{
-        margin-bottom : 20px!important ;
+      .back {
+        background-color: #6495ED ;
+      }
+      .cost {
+        background-color: #ADFF2F ;
+        border-color: #228B22 ;
+      }
+      .min{
+        background-color: #d8d7d7 ;
+      }
+      .max {
+        background-color: #ccc ;
       }
     </style>
     <script src="lib/angular.min.js" charset="utf-8"></script>
