--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       h5{
         color: #666 ;
         font-family: sans-serif;
+        font-size: 12px ;
+      }
+      form label{
+        font-size: 14px ;
+        font-family: sans-serif;
+        font-weight: bold;
+        color : #333 ;
       }
       .container {
         padding: 20px;
@@ -38,6 +45,16 @@
       .max {
         background-color: #ccc ;
       }
+      .pictogram.arrow{
+        position: relative;
+        display: block;
+        left: 40% ;
+        width: 20% ;
+        height: 90px ;
+        font-size: 100px ;
+        line-height: 80px ;
+        color: #ccc ;
+      }
     </style>
     <script src="lib/angular.min.js" charset="utf-8"></script>
     <script src="bower_components/angularjs-slider/dist/rzslider.min.js" charset="utf-8"></script>
@@ -50,7 +67,6 @@
   </body>
   <script src="src/services/pricing.service.js" charset="utf-8"></script>
   <script src="src/services/mail.service.js" charset="utf-8"></script>
-  <script src="src/components/info.component.js" charset="utf-8"></script>
   <script src="src/components/calculate.component.js" charset="utf-8"></script>
   <script src="src/components/statistics.component.js" charset="utf-8"></script>
   <script src="src/routes.js" charset="utf-8"></script>
